--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  font-family: "Abril Fatface", "Arial", "sans-serif";
+  font-size: 24px;
+}
+
+.anchor-middle {
+  text-anchor: middle;
+}
